--- a/requirements.txt
+++ b/requirements.txt
@@ -1,94 +1,94 @@
-aiohappyeyeballs=2.6.1=pypi_0
-aiohttp=3.11.14=pypi_0
-aiosignal=1.3.2=pypi_0
-anyio=4.9.0=pypi_0
-anyqt=0.2.0=pypi_0
-async-timeout=5.0.1=pypi_0
-attrs=25.3.0=pypi_0
-backports-tarfile=1.2.0=pypi_0
-baycomp=1.0.3=pypi_0
-bottleneck=1.4.2=pypi_0
-catboost=1.2.7=pypi_0
-cattrs=24.1.3=pypi_0
-certifi=2025.1.31=pypi_0
-chardet=5.2.0=pypi_0
-charset-normalizer=3.4.1=pypi_0
-commonmark=0.9.1=pypi_0
-contourpy=1.3.1=pypi_0
-cvxopt=1.3.2=pypi_0
-cycler=0.12.1=pypi_0
-deprecation=2.1.0=pypi_0
-dgl=1.1.0=pypi_0
-dictdiffer=0.9.0=pypi_0
-docutils=0.21.2=pypi_0
-et-xmlfile=2.0.0=pypi_0
-filelock=3.18.0=pypi_0
-fonttools=4.56.0=pypi_0
-frozenlist=1.5.0=pypi_0
-fsspec=2025.3.0=pypi_0
-gensim=4.3.3=pypi_0
-h11=0.14.0=pypi_0
-h5py=3.13.0=pypi_0
-httpcore=1.0.7=pypi_0
-httpx=0.28.1=pypi_0
-idna=3.10=pypi_0
-intervaltree=3.1.0=pypi_0
-jaraco-classes=3.4.0=pypi_0
-jaraco-context=6.0.1=pypi_0
-jaraco-functools=4.1.0=pypi_0
-jinja2=3.1.6=pypi_0
-joblib=1.4.2=pypi_0
-keyring=25.6.0=pypi_0
-keyrings-alt=5.0.2=pypi_0
-kiwisolver=1.4.8=pypi_0
-lxml=5.3.1=pypi_0
-markupsafe=3.0.2=pypi_0
-matplotlib=3.10.1=pypi_0
-more-itertools=10.6.0=pypi_0
-mpmath=1.3.0=pypi_0
-multidict=6.2.0=pypi_0
-narwhals=1.32.0=pypi_0
-networkx=3.4.2=pypi_0
-numpy=1.26.4=pypi_0
-openpyxl=3.1.5=pypi_0
-opentsne=1.0.2=pypi_0
-orange-canvas-core=0.2.5=pypi_0
-orange-widget-base=4.25.1=pypi_0
-orange3=3.38.1=pypi_0
-pandas=2.2.3=pypi_0
-pillow=11.1.0=pypi_0
-plotly=6.0.1=pypi_0
-pm4py=2.7.14.4=pypi_0
-propcache=0.3.1=pypi_0
-pydotplus=2.0.2=pypi_0
-pyparsing=3.2.3=pypi_0
-pyqtgraph=0.13.7=pypi_0
-python-graphviz=0.20.3=pypi_0
-python-louvain=0.16=pypi_0
-pytz=2025.2=pypi_0
-pyyaml=6.0.2=pypi_0
-qasync=0.27.1=pypi_0
-qtconsole=5.6.1=pypi_0
-qtpy=2.4.3=pypi_0
-requests=2.32.3=pypi_0
-requests-cache=1.2.1=pypi_0
-scikit-learn=1.6.1=pypi_0
-scipy=1.13.1=pypi_0
-serverfiles=0.3.1=pypi_0
-smart-open=7.1.0=pypi_0
-sniffio=1.3.1=pypi_0
-sortedcontainers=2.4.0=pypi_0
-sympy=1.13.3=pypi_0
-threadpoolctl=3.6.0=pypi_0
-torch=2.2.2=pypi_0
-torch-geometric=2.6.1=pypi_0
-torchdata=0.11.0=pypi_0
-tqdm=4.67.1=pypi_0
-tzdata=2025.2=pypi_0
-url-normalize=1.4.3=pypi_0
-urllib3=2.3.0=pypi_0
-wrapt=1.17.2=pypi_0
-xgboost=2.0.3=pypi_0
-xlrd=2.0.1=pypi_0
-xlsxwriter=3.2.2=pypi_0
-yarl=1.18.3=pypi_0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.14
+aiosignal==1.3.2
+anyio==4.9.0
+anyqt==0.2.0
+async-timeout==5.0.1
+attrs==25.3.0
+backports-tarfile==1.2.0
+baycomp==1.0.3
+bottleneck==1.4.2
+catboost==1.2.7
+cattrs==24.1.3
+certifi==2025.1.31
+chardet==5.2.0
+charset-normalizer==3.4.1
+commonmark==0.9.1
+contourpy==1.3.1
+cvxopt==1.3.2
+cycler==0.12.1
+deprecation==2.1.0
+dgl==1.1.0
+dictdiffer==0.9.0
+docutils==0.21.2
+et-xmlfile==2.0.0
+filelock==3.18.0
+fonttools==4.56.0
+frozenlist==1.5.0
+fsspec==2025.3.0
+gensim==4.3.3
+h11==0.14.0
+h5py==3.13.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+intervaltree==3.1.0
+jaraco-classes==3.4.0
+jaraco-context==6.0.1
+jaraco-functools==4.1.0
+jinja2==3.1.6
+joblib==1.4.2
+keyring==25.6.0
+keyrings-alt==5.0.2
+kiwisolver==1.4.8
+lxml==5.3.1
+markupsafe==3.0.2
+matplotlib==3.10.1
+more-itertools==10.6.0
+mpmath==1.3.0
+multidict==6.2.0
+narwhals==1.32.0
+networkx==3.4.2
+numpy==1.26.4
+openpyxl==3.1.5
+opentsne==1.0.2
+orange-canvas-core==0.2.5
+orange-widget-base==4.25.1
+orange3==3.38.1
+pandas==2.2.3
+pillow==11.1.0
+plotly==6.0.1
+pm4py==2.7.14.4
+propcache==0.3.1
+pydotplus==2.0.2
+pyparsing==3.2.3
+pyqtgraph==0.13.7
+python-louvain==0.16
+pytz==2025.2
+pyyaml==6.0.2
+qasync==0.27.1
+qtconsole==5.6.1
+qtpy==2.4.3
+requests==2.32.3
+requests-cache==1.2.1
+scikit-learn==1.6.1
+scipy==1.13.1
+serverfiles==0.3.1
+smart-open==7.1.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+sympy==1.13.3
+threadpoolctl==3.6.0
+torch==2.2.2
+torch-geometric==2.6.1
+torchdata==0.11.0
+tqdm==4.67.1
+tzdata==2025.2
+url-normalize==1.4.3
+urllib3==2.3.0
+wrapt==1.17.2
+xgboost==2.0.3
+xlrd==2.0.1
+xlsxwriter==3.2.2
+yarl==1.18.3
+hyperopt
